+documentation -unused rows

--- a/trace.1
+++ b/trace.1
@@ -36,7 +36,7 @@ Specifies what TTL to use for the first packet. Default value is 1.
 Specifies maximum TTL value for packets. Default value is 30.
 .TP
 .BR address
-IPV4/IPV6 host address.
+IPV4/IPV6 host address. Program supports address translation (you can run it both with hostname or IP address of the target host).
 .SH EXAMPLES
 To trace path to google.com use:
 .PP
